# pymkm

./: .gitignore  LICENSE  README.md  README.rst  constants.py  functions.py  mkm.py  pyproject.toml  thermo.py
Pd_In2O3_CPa/: Demo_pymkm.ipynb  g.mkm
electromkm/: constants.py  electromkm.py  functions.py  parser.py  rm_parser.py
electromkm/HER/: .rm.mkm.swp  Demo_electromkm.ipynb  Electromkm_demo.ipynb  g.mkm  rm.mkm
electromkm_cation/: conda_env_instructions  electromkm.py  g_parser.py  rm_parser.py
electromkm_cation/CO2R_H2OR_Ag_100_K_3_H2O/: DRC.npy  Electromkm_demo.ipynb  Electromkm_demo.py  X_C2C_298_1_ts.csv  g.mkm  input
electromkm_cation/CO2R_H2OR_Ag_110_K_3_H2O/: Electromkm_demo.ipynb  g.mkm  output  rm.mkm
electromkm_cation/CO2R_H2OR_Ag_111_Cs_3_H2O/: Demo_electromkm.ipynb  Electromkm_demo.ipynb  Electromkm_demo.py  Multi-scale_0.1.csv  g.mkm  input  output  results.ipynb  rm.mkm
electromkm_cation/CO2R_H2OR_Ag_111_K_3_H2O/: Electromkm_demo.ipynb  Electromkm_demo.py  Multi-scale.csv  X_C2C_298_1_ts.csv  g.mkm  input  output  results_0.1.ipynb  rm.mkm
electromkm_cation/CO2R_H2OR_Ag_111_Li_3_H2O/: DRC.npy  Electromkm_demo.ipynb  X_C2C_298_1_ts.csv  g.mkm  input  output  rm.mkm
electromkm_cation/CO2R_H2OR_HER_Ag_111_Cs_3_H2O/: Electromkm_demo.ipynb  Electromkm_demo.py  g.mkm  input  output  rm.mkm
examples/HER/: Electromkm_demo.ipynb  rm.mkm
mkm/: functions.py  g_parser.py  mkm.py  reactor.py  rm_parser.py
pymkm/: __init__.py  constants.py  energy_profile_gen.py  functions.py  g_parser.py  lsr.py  mkm.py  reactor.py  rm_parser.py  thermo.py
(+45 files in other folders)
