[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymkm"
version = "0.0.1"
dependencies = [
  "matplotlib==3.7.4",
"natsort==8.4.0",
"numpy==1.24.4",
"pandas==2.0.3",
"scikit_learn==1.3.1",
"scipy==1.10.0",
"setuptools==70.0.0"  
]
requires-python = ">=3.8"
authors = [
  {name = "Santiago Morandi", email = "smorandi@iciq.es"}
]
maintainers = [
  {name = "Santiago Morandi", email = "smorandi@iciq.es"},
]
description = "Microkinetic modeling tool for thermal and electro heterogenous catalysis"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["heterogeneous catalysis", "chemical reaction networks", "kinetics", "microkinetic modeling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://gitlab.com/iciq-tcc/nlopez-group/pymkm_clean"

[tool.setuptools]
include-package-data = true